Introduced JobStore interface and its InMemoryJobStore implementation