@@ -1,35 +1,40 @@
 package ru.dorofeev.sandbox.quartzworkflow.tests;
 
 import org.junit.*;
-import ru.dorofeev.sandbox.quartzworkflow.Factory;
 import ru.dorofeev.sandbox.quartzworkflow.engine.Engine;
 import ru.dorofeev.sandbox.quartzworkflow.engine.Event;
 import ru.dorofeev.sandbox.quartzworkflow.engine.EventHandler;
-import ru.dorofeev.sandbox.quartzworkflow.queue.QueueingOption;
+import ru.dorofeev.sandbox.quartzworkflow.queue.QueueingOptions;
 import ru.dorofeev.sandbox.quartzworkflow.tests.utils.H2Db;
+import ru.dorofeev.sandbox.quartzworkflow.tests.utils.Utils;
 
 import java.util.List;
 import java.util.concurrent.CopyOnWriteArrayList;
 
-import static java.util.stream.Collectors.toList;
 import static org.awaitility.Awaitility.await;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.collection.IsEmptyCollection.empty;
+import static ru.dorofeev.sandbox.quartzworkflow.Factory.spawn;
 import static ru.dorofeev.sandbox.quartzworkflow.engine.EventUtils.noEvents;
+import static ru.dorofeev.sandbox.quartzworkflow.execution.ExecutorServiceFactory.fixedThreadedExecutorService;
+import static ru.dorofeev.sandbox.quartzworkflow.jobs.Job.Result.FAILED;
+import static ru.dorofeev.sandbox.quartzworkflow.jobs.JobStoreFactory.inMemoryJobStore;
+import static ru.dorofeev.sandbox.quartzworkflow.queue.QueueStoreFactory.inMemoryQueueStore;
+import static ru.dorofeev.sandbox.quartzworkflow.serialization.SerializationFactory.jsonSerialization;
 
 public class EngineTests {
 
 	private static Engine engine;
-	private static List<Throwable> errors = new CopyOnWriteArrayList<>();
+	private static final List<String> errors = new CopyOnWriteArrayList<>();
 
 	@BeforeClass
 	public static void beforeClass() throws Exception {
 		H2Db h2Db = new H2Db("./build/test");
 		h2Db.deleteDb();
 
-		engine = Factory.createInMemory();
-		engine.errors().subscribe(errors::add);
+		engine = spawn(jsonSerialization(), inMemoryJobStore(), inMemoryQueueStore(), fixedThreadedExecutorService(10, 1000));
+		engine.errors().map(Utils::exceptionToString).subscribe(errors::add);
 	}
 
 	@AfterClass
@@ -44,7 +49,7 @@ public class EngineTests {
 	@After
 	public void afterTest() {
 		assertThat(errors, is(empty()));
-		assertThat(engine.getJobRepository().traverseFailed().collect(toList()), is(empty()));
+		assertThat(engine.getJobRepository().traverse(FAILED).toList().toBlocking().single(), is(empty()));
 	}
 
 	@Test
@@ -72,7 +77,7 @@ public class EngineTests {
 		}
 
 		@Override
-		public QueueingOption getQueueingOption(Event event) {
+		public QueueingOptions getQueueingOption(Event event) {
 			return null;
 		}
 
@@ -83,7 +88,7 @@ public class EngineTests {
 
 	private static class StubEvent extends Event {
 
-		private String id;
+		private final String id;
 
 		StubEvent(String id) {
 			this.id = id;
